# Fairness-Pipeline-Development-Toolkit

./: QUICKSTART.md  README.md  USAGE.md  __init__.py  config.yml  config_models.py  demo. ipynb  generate_dataset.py  preprocessing.py  pyproject.toml  run_pipeline.py  test_data_loader.py  test_model_trainer.py  test_preprocessing.py
data/: loan_approval.csv
example/: demo.ipynb
src/: baseline_measurement.py  data_loader.py  final_validator.py  mlflow_logger.py  model_trainer.py  run_pipeline.py
