[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fairness-pipeline-toolkit"
version = "1.0.0"
description = "Production-ready fairness pipeline for ML systems"
authors = ["Cindy Waweru <cinwaweru@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/fairness-pipeline-toolkit"
repository = "https://github.com/yourusername/fairness-pipeline-toolkit"
keywords = ["machine-learning", "fairness", "mlops", "bias-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
mlflow = "^2.8.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0"
plotly = "^5.18.0"
scipy = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
ipykernel = "^6.27.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
run-pipeline = "fairness_pipeline.orchestrator:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term"
