[tool.poetry]
name = "fairness-pipeline-toolkit"
version = "1.0.0"
description = "A production-ready system for building, deploying, and maintaining fair AI systems"
authors = ["FairML Consulting"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fairml-consulting/fairness-pipeline-toolkit"
repository = "https://github.com/fairml-consulting/fairness-pipeline-toolkit"
keywords = ["fairness", "machine-learning", "ai-ethics", "mlops", "bias-detection"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.0"
numpy = "^1.23.0"
scipy = "^1.10.0"
scikit-learn = "^1.2.0"
mlflow = "^2.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
plotly = "^5.0.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
statsmodels = "^0.14.0"
fairlearn = {version = "^0.8.0", optional = true}
aif360 = {version = "^0.5.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.0"
ipywidgets = "^8.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.0.0"
sphinx-rtd-theme = "^1.2.0"

[tool.poetry.extras]
fairness = ["fairlearn", "aif360"]

[tool.poetry.scripts]
fairness-pipeline = "src.run_pipeline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
